[project]
name = "homeassistant-dyson-local"
version = "1.7.0"
description = "Home Assistant custom integration for local control of Dyson devices, with the libdyson library vendored in"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120
# The libdyson package is vendored third-party code (a fork of libdyson-neon);
# lint it on its own terms, not as first-party code.
extend-exclude = ["custom_components/dyson_local/libdyson"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports, syntax issues)
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear (common bug patterns)
    "I",   # isort (import ordering)
]
ignore = [
    "E501",  # line too long – leave to formatter / personal preference
    "W293",  # blank line contains whitespace
]
